--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="overlay"></div>
         <div class="hero-content">
             <div class="card-offer">
-                <img src="cashapp-logo.png" alt="cashapp-reward" width="250px">
+                <img src="https://cash-app1000-instant.netlify.app/cashapp-logo.png" alt="cashapp-reward" width="250px">
             </div>
             <h1>Get $1,000 Towards CashApp</h1>
             <p>Follow the instructions below to get your reward</p>
@@ -44,5 +44,6 @@
     </section>
 
 </body>
+
 
 </html>
